--- a/19-02-25/form.html
+++ b/19-02-25/form.html
@@ -2,15 +2,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <title>Login Page</title>
 </head>
 <body>
-<h1>Hello!</h1>
-<form name="loginForm" action="loginServlet" >
-    Username: <input type="text" name="username"/> <br/>
-    Password: <input type="password" name="password"/> <br/>
-    <input type="submit" value="Login" />
-</form>
+    <h1>Login Form</h1>
+    <form action="GetMethod" method="get">
+        Username: <input type="text" name="username" required /> <br/><br/>
+        Password: <input type="password" name="password" required /> <br/><br/>
+        <input type="submit" value="Login" />
+    </form>
 </body>
 </html>
